--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="todoList.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -26,6 +26,6 @@
       <h5>You Must Write Here Something!</h5>
     </div>
 
-    <script src="todoList.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
